Equalise the width of the header and footer (avoiding horizontal overflow)

--- a/django/crashreport/stats/static/stats/css/common.less
+++ b/django/crashreport/stats/static/stats/css/common.less
@@ -103,7 +103,7 @@ div.page-footer {
     color: #edf1f3;
     border-top: 1px solid #bbc3c7;
     margin: 40px 0 0 0;
-    padding: 10px 20px;
+    padding: 10px 0;
     overflow: auto;
     width: 100%;
     a {
